@@ -403,16 +403,6 @@ If mode is set to "deadline", this is the date at which the "skip registration" 
 string is formatted as the output of the "date" command is.
 EOT
 
-[registration.completemsg]
-type=toggle
-options=enabled|disabled
-description=<<EOT
-If enabled, a confirmation screen is displayed after a user successfully registered.  This is useful if you believe the 
-registration process isn't sufficiently clear to users.  The HTML file displayed is found at:
-
-/usr/local/pf/html/user/content/violations/reg_complete.php
-EOT
-
 [registration.maxnodes]
 type=numeric
 description=<<EOT
