@@ -72,16 +72,6 @@ actions=trap,log
 button_text=Scan
 disable=Y
 
-[1200002]
-priority=2
-max_enable=0
-desc=Registration Completed
-url=/content/index.php?template=reg_complete&admin=yes
-actions=trap,log
-button_text=Complete Registration
-grace=1
-disable=Y
-
 [1200003]
 desc=Auto-registered Device
 priority=1
