@@ -90,7 +90,6 @@ The Stinger utility could then be accessed at https://pfhostname/proxies/tools/s
   <a href='registration.html#aup'>aup</a><br>
   <a href='registration.html#auth'>auth</a><br>
   <a href='registration.html#button_text'>button_text</a><br>
-  <a href='registration.html#completemsg'>completemsg</a><br>
   <a href='registration.html#expire_deadline'>expire_deadline</a><br>
   <a href='registration.html#expire_mode'>expire_mode</a><br>
   <a href='registration.html#expire_session'>expire_session</a><br>
