@@ -7,7 +7,7 @@
   <img src="/common/packetfence.png">
   <p><b><font size=+1>Configuration Reference - registration</font></b></p>
 <a name=aup></a>
-<b>aup</b> <i>(toggle         )</i><br>
+<b>aup</b> <i>(toggle)</i><br>
 Default: disabled<br>
 Options: enabled|disabled<br>
 If enabled, users will be required to accept an Acceptable Use Policy before network access is allowed.  Currently, registration                     
@@ -26,14 +26,6 @@ auth=<authname>.  The default value, local, relies on a local access file in /us
 <b>button_text</b> <i>(text)</i><br>
 Default: Register<br>
 The button text will appear on the registration page submit button<p>
-<a name=completemsg></a>
-<b>completemsg</b> <i>(toggle)</i><br>
-Default: disabled<br>
-Options: enabled|disabled<br>
-If enabled, a confirmation screen is displayed after a user successfully registered.  This is useful if you believe the 
-registration process isn't sufficiently clear to users.  The HTML file displayed is found at:
-<p>
-/usr/local/pf/html/user/content/violations/reg_complete.php<p>
 <a name=expire_deadline></a>
 <b>expire_deadline</b> <i>(date)</i><br>
 Default: Mon Nov 12 12:00:00 EST 2012<br>
