@@ -1,7 +1,0 @@
-<?
-
-$description_header='Registration Complete';
-
-$description_text='Thank you for registering  your system!';
-
-?>
